<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="UiPackage.LoginActivity">


    <TextView
        android:id="@+id/greetings"
        android:layout_width="200dp"
        android:layout_height="@dimen/text_input_layout_height"
        android:text="@string/Welcome_back_message"
        android:textSize="@dimen/text_size_extra_large"
        android:autoSizeTextType="uniform"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toTopOf="@+id/note"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0"
        tools:targetApi="26" />

    <TextView
        android:id="@+id/note"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:text="@string/application_name"
        android:textColor="@color/dirty_white"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="@font/poppins_thin"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"

        android:layout_width="@dimen/text_input_layout_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/email_hint"
        android:textColorHint="@color/dirty_white"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:cursorColor="@color/translucent_white"
        app:errorEnabled="false"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963"
        app:placeholderText="Enter your email"
        app:placeholderTextColor="@color/dirty_white"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="@dimen/text_input_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableStart="@drawable/outline_email_24"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/dirty_white"
            android:textSize="@dimen/text_size_large" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/text_input_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password_hint"
        android:textColorHint="@color/dirty_white"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:cursorColor="@color/white"
        app:errorEnabled="false"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.96"
        app:placeholderText="Enter your password"
        app:placeholderTextColor="@color/dirty_white"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="@dimen/text_input_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableStart="@drawable/outline_lock_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:textColor="@color/dirty_white"
            android:textSize="@dimen/text_size_large" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.671" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/poppins_extralight"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/choose_login_options"
        android:textColor="@color/dirty_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.12" />


    <TextView
        android:layout_width="330dp"
        android:layout_height="380dp"
        android:background="@drawable/box"
        android:foregroundGravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textFontWeight="2"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.771" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9002433" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />


    <!--    </FrameLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>