<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="UiPackage.RegisterActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="500dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/register_title"
        android:layout_width="200dp"
        android:layout_height="@dimen/text_input_layout_height"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:autoSizeTextType="uniform"
        android:text="@string/register_title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="26" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/please_fill_the_input_below_here"
        android:fontFamily="@font/poppins_thin"
        android:textColor="@color/dirty_white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName_editText"
        android:layout_width="@dimen/text_input_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/fullname"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:cursorColor="@color/white"
        app:placeholderTextColor="@color/dirty_white"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:placeholderText="Enter your full name"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="@dimen/text_input_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_thin"
            android:drawableStart="@drawable/outline_person_outline"
            android:drawablePadding="10dp"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_editText"
        android:layout_width="@dimen/text_input_layout_width"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:cursorColor="@color/white"
        app:placeholderTextColor="@color/dirty_white"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.205"
        app:placeholderText="Enter your email"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="@dimen/text_input_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_thin"
            android:drawableStart="@drawable/outline_email_24"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_editText"
        android:layout_width="@dimen/text_input_layout_width"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:placeholderTextColor="@color/dirty_white"
        app:cursorColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.39"
        app:placeholderText="Enter your password"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="@dimen/text_input_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_thin"
            android:drawableStart="@drawable/outline_lock_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword_editText"
        android:layout_width="@dimen/text_input_layout_width"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pass_hint"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:placeholderTextColor="@color/dirty_white"
        app:cursorColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.57"
        app:placeholderText="Enter your password"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="@dimen/text_input_layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_thin"
            android:drawableStart="@drawable/outline_lock_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_green"
        android:text="@string/register"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword_editText"
        app:layout_constraintVertical_bias="0.179" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.777"
        android:backgroundTint="@color/white"
        android:progressBackgroundTint="@color/white"
        android:visibility="gone"
        android:foregroundGravity="center"/>

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_thin"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>